Try to fix indexing

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,23 +1,18 @@
-name: Jacky Zhao
+name: Afnan Mir
 enableToc: true
-openToc: false
+openToc: true
 enableLinkPreview: true
 enableLatex: true
-enableCodeBlockTitle: true
-enableCodeBlockCopy: true
 enableSPA: true
 enableFooter: true
 enableContextualBacklinks: true
 enableRecentNotes: false
-enableGitHubEdit: false
-GitHubLink: https://github.com/jackyzha0/quartz/tree/hugo/content
 description:
-  Host your second brain and digital garden for free. Quartz features extremely fast full-text search,
-  Wikilink support, backlinks, local graph, tags, and link previews.
+  A space to hold Afnan Mir's thoughts
 page_title:
-  "🪴 Quartz 3.2"
+  "Afnan's Mind"
 links:
-  - link_name: Twitter
-    link: https://twitter.com/_jzhao
+  - link_name: Linkedin
+    link: https://www.linkedin.com/in/afnan-mir/
   - link_name: Github
-    link: https://github.com/jackyzha0
+    link: https://github.com/afnanmmir
