fix build issue

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -20,7 +20,7 @@ search:
 description:
   A space to hold Afnan Mir's thoughts
 page_title:
-  "🪴 Quartz 3.3"
+  "Afnan's Thoughts"
 links:
   - link_name: LinkedIn
     link: https://www.linkedin.com/in/afnan-mir/
