--- a/data/config.yaml
+++ b/data/config.yaml
@@ -15,8 +15,8 @@ enableMermaid: true
 GitHubLink: https://github.com/jackyzha0/quartz/tree/hugo/content
 search:
   enableSemanticSearch: true
-  operandApiKey: "REPLACE-WITH-YOUR-OPERAND-API-KEY"
-  operandIndexId: "REPLACE-WITH-YOUR-OPERAND-INDEX-ID"
+  operandApiKey: "eogtlj2xq4hjer24b8coat5818294wjs"
+  operandIndexId: "hn52azi1brr67w77"
 description:
   A space to hold Afnan Mir's thoughts
 page_title:
